[tool.poetry]
name = "intro-testes"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{include = "intro_testes"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"
black = "^23.3.0"
coverage = "^7.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
